chore: update build configs and Dockerfile to resolve multi-jar copy conflict and compile Rust engine